
erDiagram
    Hikers {
        guid Id PK "Primary Key"
        string Name "Name of the user"
        datetime DateOfBirth "Date of Birth"
        int ExperienceLevel "Experience Level"
    }
    ExperienceLevel {
        int Id PK "Primary Key"
        string Description "Description of experience level, i.e. Beginner, Intermediate, Expert"
    }

    Trails {
        guid Id PK "Primary Key"
        string Name "Name of the trail"
        float Length "Length of the trail in kilometers"
        string Difficulty "Difficulty level of the trail"
        url GeographicTrailUrl "URL to the geographic trail geojson data"
    }
    HikerTrails {
        guid HikerId FK "Foreign Key to Hikers"
        guid TrailId FK "Foreign Key to Trails"
        datetime DateCompleted "Date when the hiker completed the trail"
        int TimeTaken "Time taken to complete the trail in days"
        int Rating "Rating value given by the hiker (1-5)"
    }
    Mountains {
        guid Id PK "Primary Key"
        string Name "Name of the mountain"
        float Height "Elevation of the mountain in meters"
    }
    TrailMountains {
        guid TrailId FK "Foreign Key to Trails"
        guid MountainId FK "Foreign Key to Mountains"
    }


    Hikers ||--o{ HikerTrails : "perform"
    Trails ||--o{ HikerTrails : "link"
    Trails ||--o{ TrailMountains : "include"
    Mountains ||--o{ TrailMountains : "part of"
    Hikers }|..|{ ExperienceLevel : "has"
